# stock-market-rag-mvp

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
agent/: __init__.py  graph.py  state.py
agent/analysis/: __init__.py  dedupe.py  finance.py  nlp.py
agent/reporting/: __init__.py  render.py  template.md.j2
agent/tools/: __init__.py  alpha_vantage.py  llm_client.py  rss_client.py  tavily_client.py
apps/api/: main.py
apps/web/: package-lock.json  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/reports/: page.tsx
apps/web/app/reports/[...path]/: page.tsx
apps/web/app/run/: page.tsx
apps/web/components/: Outline.tsx  Prose.tsx  ReportShell.tsx  nav.tsx  spotlight.tsx
apps/web/components/ui/: badge.tsx  button.tsx  card.tsx  dropdown-menu.tsx  input.tsx  scroll-area.tsx  separator.tsx  toast.tsx  tooltip.tsx
docs/: api.md  data.md  deploy.md  model.md  ops.md  rag.md  ui.md
infra/: compose.yaml
infra/docker/: Dockerfile.api  Dockerfile.web
infra/migrations/: 001_init.sql  002_indexes.sql  003_embeddings_hf.sql  004_fix_errors_default.sql
memory/: __init__.py  embedding_provider.py  kv_store.py  supabase_sql.py  vector_store.py
scripts/: run_once.py  seed_demo.py
tests/: __init__.py  test_graph.py  test_reporting.py  test_tools.py
